src/test/ui/parser/require-parens-for-chained-comparison.stderr
error: chained comparison operators require parentheses
  --> $DIR/require-parens-for-chained-comparison.rs:6:11
   |
LL |     false == false == false;
   |           ^^^^^^^^^^^^^^^^^

error: chained comparison operators require parentheses
  --> $DIR/require-parens-for-chained-comparison.rs:9:11
   |
LL |     false == 0 < 2;
   |           ^^^^^^^^

error: chained comparison operators require parentheses
  --> $DIR/require-parens-for-chained-comparison.rs:12:6
   |
LL |     f<X>();
   |      ^^^^
   |
   = help: use `::<...>` instead of `<...>` if you meant to specify type arguments
   = help: or use `(...)` if you meant to specify fn arguments

error: aborting due to 3 previous errors

